--- a/src/components/OutputBox.scss
+++ b/src/components/OutputBox.scss
@@ -5,7 +5,11 @@
   align-items: center;
   justify-content: flex-end;
 
-  @media (max-width: 568px) {
+  @media (max-width: 399px) {
+    height: 25%;
+  }
+
+  @media (min-width: 400px) and (max-width: 568px) {
     height: 22.5%;
   }
 
@@ -14,16 +18,20 @@
     font-weight: 700;
     margin-right: 1.5rem;
 
+    @media (max-width: 399px) {
+      font-size: 2.25em;
+    }
+
+    @media (min-width: 400px) and (max-width: 568px) {
+      font-size: 2.75em;
+    }
+
     @media (min-width: 1920px) {
       font-size: 62px;
     }
 
     @media (min-width: 2400px) {
       font-size: 82px;
-    }
-
-    @media (max-width: 568px) {
-      font-size: 40px;
     }
   }
 }
