--- a/src/components/RenderKeyRows.scss
+++ b/src/components/RenderKeyRows.scss
@@ -5,8 +5,12 @@
   width: 100%;
   column-gap: 5%;
 
-  @media (max-width: 568px) {
-    column-gap: 0.25em;
+  @media (max-width: 399px) {
+    column-gap: 0.875em;
+  }
+
+  @media (min-width: 400px) and (max-width: 568px) {
+    column-gap: 1em;
   }
 
   div {
@@ -18,7 +22,7 @@
     button {
       max-width: 100%;
       height: 100%;
-      padding-top: 0.25rem;
+      padding-top: 0.5rem;
       border-radius: 0.75rem;
       font-size: 42px;
       border: none;
@@ -26,12 +30,12 @@
 
       @media (max-width: 399px) {
         border-radius: 7.5%;
-        font-size: 36px;
+        font-size: 2em;
       }
 
       @media (min-width: 400px) and (max-width: 568px) {
         border-radius: 7.5%;
-        font-size: 2em;
+        font-size: 2.25em;
       }
 
       @media (min-width: 768px) and (max-width: 1024px) {
@@ -54,11 +58,11 @@
       font-size: 27px;
 
       @media (max-width: 399px) {
-        font-size: 23px;
+        font-size: 1.25em;
       }
 
       @media (min-width: 400px) and (max-width: 568px) {
-        font-size: 26px;
+        font-size: 1.675em;
       }
 
       @media (min-width: 768px) and (max-width: 1024px) {
